--- a/.github/workflows/Alive.yml
+++ b/.github/workflows/Alive.yml
@@ -2,7 +2,7 @@ name: Heroku Awake
 
 on:
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: "*/20 * * * *"
 
 jobs:
   build:
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: mikeesto/heroku-awake@1.0.0
         with:
-          URL: "https://link.yasir.my.id" 
+          URL: "https://yasirlink.ga" 
 
